Finished styling header section

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -10,7 +12,7 @@ body {
 }
 
 .header-img {
-  width: 500px;
+  width: 400px;
   height: auto;
 }
 
@@ -22,7 +24,7 @@ body {
 .header {
   display: flex;
   flex-direction: column;
-  background: #1f2937;
+  background-color: #1f2937;
 }
 
 /*
@@ -30,8 +32,8 @@ body {
 */
 
 .nav-bar {
-  background: inherit;
-  padding: 8px;
+  background-color: inherit;
+  padding: 16px;
 }
 
 .nav-bar > ul {
@@ -42,7 +44,7 @@ body {
 
 .nav-bar li,
 .nav-bar li a {
-  color: rgba(255, 255, 255, 0.7);
+  color: #e5e7eb;
 }
 
 .nav-bar li a {
@@ -54,7 +56,7 @@ body {
   margin-left: 100px;
   font-weight: 700;
   font-size: 24px;
-  color: rgba(255, 255, 255, 1);
+  color: #f9faf8;
 }
 
 .last-list-child {
@@ -67,4 +69,50 @@ body {
 
 .sum-info {
   flex: auto;
+  display: flex;
+  height: 400px;
+}
+
+.left-container, .right-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.left-container {
+    flex: 3 1 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.right-container {
+    flex: 1 1 auto
+}
+
+.title, .subtitle {
+    width: 400px;
+}
+
+h1.title {
+    font-size: 48px;
+    font-weight: 1000;
+    color: #f9faf8;
+    padding: 0;
+}
+
+p.subtitle {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+button.signup-btn {
+    background-color: #3882f6;
+    color: #f9faf8;
+    border: none;
+    height: 30px;
+    width: 100px;
+    margin-right: 300px;
+    border-radius: 8px;
 }
