Styled Information section

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;800;&display=swap");
 
 * {
   box-sizing: border-box;
@@ -73,46 +73,86 @@ body {
   height: 400px;
 }
 
-.left-container, .right-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+.left-container,
+.right-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .left-container {
-    flex: 3 1 auto;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+  flex: 3 1 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .right-container {
-    flex: 1 1 auto
+  flex: 1 1 auto;
 }
 
-.title, .subtitle {
-    width: 400px;
+.title,
+.subtitle {
+  width: 400px;
 }
 
 h1.title {
-    font-size: 48px;
-    font-weight: 1000;
-    color: #f9faf8;
-    padding: 0;
+  font-size: 48px;
+  font-weight: 800;
+  color: #f9faf8;
+  padding: 0;
 }
 
 p.subtitle {
-    font-size: 18px;
-    color: #e5e7eb;
+  font-size: 18px;
+  color: #e5e7eb;
 }
 
-button.signup-btn {
-    background-color: #3882f6;
-    color: #f9faf8;
-    border: none;
-    height: 30px;
-    width: 100px;
-    margin-right: 300px;
-    border-radius: 8px;
+.signup-btn {
+  height: 30px;
+  width: 100px;
+  margin-right: 300px;
+  border-radius: 8px;
+}
+
+.normal-signup {
+  border: none;
+  background-color: #3882f6;
+  color: #f9faf8;
+}
+
+.invert-signup {
+  background-color: transparent;
+  border: 2px solid #f9faf8;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 20px;
+  padding: 32px;
+}
+
+.content .flex-wrapper {
+  display: flex;
+  gap: 32px;
+  justify-content: center;
+}
+
+.content .flex-wrapper .img-container {
+  flex: 0 0 200px;
+}
+
+.content .flex-wrapper .img-container img {
+  border: 8px solid #3882f6;
+  border-radius: 8px;
+}
+
+h1.content-title {
+  color: #1f2937;
+  font-size: 32px;
+  font-weight: 800;
 }
