Finished styling Footer (Page Layout is done)

--- a/styles.css
+++ b/styles.css
@@ -222,3 +222,12 @@ h1.content-title {
 .ad-left > .ad-title {
   font-size: 24px;
 }
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1f2937;
+  padding: 20px;
+  color: #f9faf8;
+}
